--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "test1.js",
   "scripts": {
-    "test": "mocha test/*.js --reporter mochawesome"
+    "test": "mocha test/*.js --reporter mochawesome  --reporter mocha-junit-reporter"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "mocha": "^4.0.1",
+    "mocha-junit-reporter": "^1.15.0",
     "mochawesome": "^2.3.1",
     "should": "^13.1.3"
   }
-  
 }
